# trident-LOB

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  NEXT_SESSSION_PROMPT.md  README.md  next_session_prompt.md  pyproject.toml  pyproject.toml.placeholder
TASKS/: README.md
TASKS/backlog/: README.md
TASKS/blocked/: README.md
TASKS/done/: README.md  TASK-001-phase-1a-scaffolding-and-validation-skeleton.md  TASK-002-phase-1b-offline-data-and-event-store.md
TASKS/in-progress/: README.md  TASK-001-phase-1a-scaffolding-and-validation-skeleton.md  TASK-002-phase-1b-offline-data-and-event-store.md  TASK-003-phase-1c-features-labels-and-splits.md
benchmarks/: README.md
configs/: README.md
data/: README.md
data/manifests/: README.md
docs/: README.md  TRIDENT_LOB_MODEL.md  data_ethics_and_risk.md  glossary.md
experiments/: README.md
experiments/run_manifests/: README.md
models/: README.md
models/registry/: README.md
plans/: AGENT_HANDOFF_TEMPLATE.md  DATA_PLAN.md  INTERFACES.md  MASTER_PLAN.md  ORCHESTRATION.md  PHASE_1_PREDICTOR.md  PHASE_2_LOB_REPLAY.md  PHASE_3_PAPER_TRADING.md  README.md  RISK_REGISTER.md  TASK_TEMPLATE.md  VALIDATION_GATES.md
reports/: README.md
research/: README.md
research/00-market-microstructure-literature/: DECISION.md  INTERFACE.md  OPTIONS.md  README.md  RESEARCH.md  VALIDATION.md
research/01-equation-audit-and-dimensional-analysis/: DECISION.md  INTERFACE.md  OPTIONS.md  README.md  RESEARCH.md  VALIDATION.md
research/02-turbulence-closure-and-fragility/: DECISION.md  INTERFACE.md  OPTIONS.md  README.md  RESEARCH.md  VALIDATION.md
research/03-latent-order-book-and-price-interface/: DECISION.md  INTERFACE.md  OPTIONS.md  README.md  RESEARCH.md  VALIDATION.md
research/04-numerical-discretization/: DECISION.md  INTERFACE.md  OPTIONS.md  README.md  RESEARCH.md  VALIDATION.md
research/05-stochastic-processes-and-calibration/: DECISION.md  INTERFACE.md  OPTIONS.md  README.md  (+2 more)
tests/: test_data_event_store.py  test_features_labels_splits.py  test_imports.py  test_safety_guards.py
(+86 files in other folders)
