[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "trident-lob"
version = "0.1.0"
description = "CPU-only research scaffold for turbulent reaction-diffusion limit order book modeling."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary research" }
authors = [{ name = "TRIDENT-LOB contributors" }]
keywords = ["limit-order-book", "market-microstructure", "research"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "click>=8.1",
  "duckdb>=1.0",
  "mlflow>=2.14",
  "numpy>=1.26",
  "omegaconf>=2.3",
  "pandas>=2.2",
  "polars>=1.0",
  "pyarrow>=16.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "scikit-learn>=1.5",
  "scipy>=1.13",
  "typer>=0.12",
]

[project.scripts]
trident-lob = "trident_lob.cli.app:main"

[dependency-groups]
dev = [
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]
test = [
  "hypothesis>=6.100",
  "pytest>=8.2",
]
ml = [
  "xgboost>=2.1",
]
docs = [
  "jupyter-book>=1.0",
]
notebooks = [
  "ipykernel>=6.29",
  "jupyter>=1.0",
  "papermill>=2.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trident_lob"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "safety: offline safety and repository guard checks",
]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "UP",
  "W",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["trident_lob"]
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true

